generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model Project {
  id           String   @id @default(uuid())
  ownerId      String?
  title        String
  goal         String
  documentType String   @default("service_plan")
  contextPack  String?
  status       String   @default("draft")
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  sections     DocumentSection[]
  drafts       DraftSubmission[]
  mergeReports MergeReport[]
  aiJobs       AIJob[]
}

model DocumentSection {
  id          String   @id @default(uuid())
  projectId   String
  sectionKey  String
  title       String
  description String?
  sortOrder   Int
  createdAt   DateTime @default(now())

  project        Project         @relation(fields: [projectId], references: [id], onDelete: Cascade)
  extractedIdeas ExtractedIdea[]
  decisionBlocks DecisionBlock[]
  finalSections  FinalDocumentSection[]

  @@unique([projectId, sectionKey])
  @@index([projectId, sortOrder])
}

model DraftSubmission {
  id         String   @id @default(uuid())
  projectId  String
  memberId   String?
  authorName String
  authorRole String?
  aiModel    String?
  taskTitle  String?
  rawText    String
  status     String   @default("submitted")
  createdAt  DateTime @default(now())

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  ideas   ExtractedIdea[]

  @@index([projectId, createdAt])
}

model ExtractedIdea {
  id                String   @id @default(uuid())
  projectId         String
  sectionId         String
  draftSubmissionId String?
  topic             String
  ideaType          String
  normalizedText    String
  confidence        Float?
  createdAt         DateTime @default(now())

  section         DocumentSection       @relation(fields: [sectionId], references: [id], onDelete: Cascade)
  draftSubmission DraftSubmission?      @relation(fields: [draftSubmissionId], references: [id], onDelete: SetNull)
  optionSources   DecisionOptionSource[]

  @@index([projectId, sectionId])
}

model MergeReport {
  id               String   @id @default(uuid())
  projectId        String
  summary          String
  missingSections  Json?
  overallRiskLevel String   @default("medium")
  createdAt        DateTime @default(now())

  project        Project         @relation(fields: [projectId], references: [id], onDelete: Cascade)
  decisionBlocks DecisionBlock[]
  finalDocuments FinalDocument[]

  @@index([projectId, createdAt])
}

model DecisionBlock {
  id              String   @id @default(uuid())
  projectId       String
  mergeReportId   String
  sectionId       String
  topic           String
  selectedSummary String
  selectionReason String?
  confidence      Float?
  conflictLevel   String   @default("none")
  status          String   @default("auto_selected")
  createdAt       DateTime @default(now())

  mergeReport MergeReport       @relation(fields: [mergeReportId], references: [id], onDelete: Cascade)
  section     DocumentSection   @relation(fields: [sectionId], references: [id], onDelete: Cascade)
  options     DecisionOption[]
  votes       AnonymousVote[]
  opinions    AnonymousOpinion[]
  clusters    OpinionCluster[]
  logs        DecisionLog[]

  @@index([projectId, sectionId])
}

model DecisionOption {
  id                     String   @id @default(uuid())
  decisionBlockId        String
  optionType             String
  content                String
  differenceFromSelected String?
  rationale              String?
  severity               String?
  voteCount              Int      @default(0)
  createdAt              DateTime @default(now())

  decisionBlock DecisionBlock          @relation(fields: [decisionBlockId], references: [id], onDelete: Cascade)
  sources       DecisionOptionSource[]
  votes         AnonymousVote[]

  @@index([decisionBlockId, optionType])
}

model DecisionOptionSource {
  id               String   @id @default(uuid())
  decisionOptionId String
  extractedIdeaId  String
  sourceExcerpt    String
  createdAt        DateTime @default(now())

  decisionOption DecisionOption @relation(fields: [decisionOptionId], references: [id], onDelete: Cascade)
  extractedIdea  ExtractedIdea  @relation(fields: [extractedIdeaId], references: [id], onDelete: Cascade)

  @@unique([decisionOptionId, extractedIdeaId])
}

model AnonymousVote {
  id              String   @id @default(uuid())
  decisionBlockId String
  decisionOptionId String
  anonymousKey    String
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  decisionBlock  DecisionBlock  @relation(fields: [decisionBlockId], references: [id], onDelete: Cascade)
  decisionOption DecisionOption @relation(fields: [decisionOptionId], references: [id], onDelete: Cascade)

  @@unique([decisionBlockId, anonymousKey])
  @@index([decisionOptionId])
}

model AnonymousOpinion {
  id              String   @id @default(uuid())
  decisionBlockId String
  anonymousKey    String
  content         String
  createdAt       DateTime @default(now())

  decisionBlock DecisionBlock       @relation(fields: [decisionBlockId], references: [id], onDelete: Cascade)
  clusterItems  OpinionClusterItem[]

  @@index([decisionBlockId, createdAt])
}

model OpinionCluster {
  id                String   @id @default(uuid())
  decisionBlockId   String
  title             String
  summary           String
  category          String
  stance            String
  relatedOptionType String?
  relatedOptionText String?
  impact            String
  reasoning         String?
  model             String
  source            String
  createdAt         DateTime @default(now())

  decisionBlock DecisionBlock        @relation(fields: [decisionBlockId], references: [id], onDelete: Cascade)
  items         OpinionClusterItem[]

  @@index([decisionBlockId, createdAt])
}

model OpinionClusterItem {
  id                String @id @default(uuid())
  opinionClusterId  String
  anonymousOpinionId String

  opinionCluster  OpinionCluster   @relation(fields: [opinionClusterId], references: [id], onDelete: Cascade)
  anonymousOpinion AnonymousOpinion @relation(fields: [anonymousOpinionId], references: [id], onDelete: Cascade)

  @@unique([opinionClusterId, anonymousOpinionId])
}

model FinalDocument {
  id              String   @id @default(uuid())
  projectId       String
  mergeReportId   String
  version         Int      @default(1)
  title           String
  contentMarkdown String
  createdAt       DateTime @default(now())

  mergeReport MergeReport             @relation(fields: [mergeReportId], references: [id], onDelete: Cascade)
  sections    FinalDocumentSection[]

  @@index([projectId, version])
}

model FinalDocumentSection {
  id              String @id @default(uuid())
  finalDocumentId String
  sectionId       String
  title           String
  content         String
  sortOrder       Int

  finalDocument FinalDocument  @relation(fields: [finalDocumentId], references: [id], onDelete: Cascade)
  section       DocumentSection @relation(fields: [sectionId], references: [id], onDelete: Cascade)

  @@index([finalDocumentId, sortOrder])
}

model DecisionLog {
  id              String   @id @default(uuid())
  projectId       String
  decisionBlockId String
  actorId         String?
  action          String
  beforeValue     String?
  afterValue      String?
  reason          String?
  createdAt       DateTime @default(now())

  decisionBlock DecisionBlock @relation(fields: [decisionBlockId], references: [id], onDelete: Cascade)

  @@index([projectId, createdAt])
}

model AIJob {
  id             String    @id @default(uuid())
  projectId      String
  jobType        String
  status         String    @default("pending")
  inputSnapshot  Json?
  outputSnapshot Json?
  errorMessage   String?
  createdAt      DateTime  @default(now())
  completedAt    DateTime?

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@index([projectId, status])
}
